--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,6 @@
       class="text-2xl text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-yellow-300 to-red-700 mr-1"
       >ChatGPT</span
     >
-    <span class="ml-1 text-2xl font-extrabold text-slate">—黛色翩翩</span>
+    <span class="ml-1 text-2xl font-extrabold text-slate">—Daniels Cai</span>
   </div>
 </header>
